--- a/src/pages/Main/styles.css
+++ b/src/pages/Main/styles.css
@@ -17,10 +17,12 @@ padding: 15px;
 margin: 15px;
 box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.2);
 }
+.galeria:hover{
+    background-color: red;
+}
 
 .imagens:hover {
-width: 200px;
-height: 200px;
+cursor: pointer;
 }
 
 .galeria h3 {
